# codex-nano-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  error.rs  launcher.rs  lib.rs  main.rs  provider.rs  provider_templates.rs  providers.json  selector.rs
src/ui/: action.rs  input.rs  mod.rs  render.rs  state.rs  theme.rs
tests/: app_commands.rs  config_store.rs  terminal_surface.rs  ui_runtime.rs
