[package]
name = "codex-nano-manager"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "cnm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dialoguer = "0.12"
dirs = "6.0"
fastrand = "2.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
toml = "1"


[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
lto = true
strip = true
